--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/egrocha/catalog#readme",
   "devDependencies": {
-    "electron": "^9.1.0"
+    "electron": "^9.1.0",
+    "electron-packager": "^15.0.0"
   },
   "dependencies": {
     "electron-settings": "^4.0.2"
