--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "catalog",
   "version": "1.0.0",
-  "description": "Desktop app that displays a wine catalog",
-  "main": "index.js",
+  "description": "",
+  "main": "main.js",
+  "dependencies": {},
+  "devDependencies": {
+    "electron": "^9.1.1"
+  },
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -16,12 +20,5 @@
   "bugs": {
     "url": "https://github.com/egrocha/catalog/issues"
   },
-  "homepage": "https://github.com/egrocha/catalog#readme",
-  "devDependencies": {
-    "electron": "^9.1.0",
-    "electron-packager": "^15.0.0"
-  },
-  "dependencies": {
-    "electron-settings": "^4.0.2"
-  }
+  "homepage": "https://github.com/egrocha/catalog#readme"
 }
