Data map and region button script added

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  "dependencies": {},
+  "dependencies": {
+    "underscore": "^1.10.2"
+  },
   "devDependencies": {
     "electron": "^9.1.1"
   },
