--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "underscore": "^1.10.2"
   },
   "devDependencies": {
-    "electron": "^9.1.1"
+    "electron": "^9.1.1",
+    "electron-packager": "^15.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
