--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "electron-pdf-window": "^1.0.12",
     "underscore": "^1.10.2"
   },
   "devDependencies": {
